# goev

./: .gitignore  Cargo.toml  README.md  client.db  data.db  desktop.db
app/desktop/: Cargo.toml
app/desktop/src/: backend_panel.rs  main.rs  sidebar.rs
app/desktop/src/command/: lan.rs  mod.rs
app/desktop/src/window/: desktop_views_window.rs  mod.rs
app/desktop/src/window/desktop/: mod.rs  render.rs  state.rs
app/enter/: Cargo.toml
app/enter/src/: main.rs  service.rs
app/enter/src/controller/: lan.rs  mod.rs  settings.rs  signaling.rs  utility.rs
app/enter/src/model/: mod.rs  setting_bridge.rs
app/enter/src/window/: desktop_views_window.rs  mod.rs
app/enter/src/window/desktop/: mod.rs  render.rs  state.rs
app/enter/src/window/settings/: about_panel.rs  account_panel.rs  backend_panel.rs  mod.rs  options_panel.rs  sidebar.rs
app/kernel/: Cargo.toml
app/kernel/src/: error.rs
app/kernel/src/api/: mod.rs
app/kernel/src/api/endpoint/: mod.rs
app/kernel/src/api/endpoint/client/: mod.rs  tcp.rs
app/kernel/src/api/endpoint/handlers/: audio_frame.rs  negotiate_desktop_params.rs  negotiate_finished.rs
app/kernel/src/api/repository/: account.rs  config.rs  mod.rs
app/kernel/src/api/signaling/: mod.rs
app/kernel/src/component/audio/: decoder.rs  encoder.rs  player.rs  recorder.rs  resampler.rs
app/kernel/src/component/desktop/macos/: duplicator.rs
app/kernel/src/component/desktop/monitor/: macos.rs  mod.rs  windows.rs
app/kernel/src/component/desktop/windows/: util.rs
app/kernel/src/component/fs/: windows.rs
app/kernel/src/component/lan/: discover.rs  mod.rs
app/kernel/src/component/video_decoder/: decoder.rs
app/kernel/src/component/video_encoder/: encoder.rs
app/kernel/src/component/video_encoder/config/: h264_videotoolbox.rs  hevc_videotoolbox.rs  libx264.rs  mod.rs
app/native/: Cargo.toml
app/native/src/: ffmpeg_binding.rs  lib.rs
app/native/src/ffmpeg/utils/: pixfmt.rs
app/utility/: Cargo.toml
app/utility/src/: bincode.rs  lib.rs  tasks.rs
docs/: client.sql  desktop.sql  mirrorX.puml
