[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_kernel = { path = "../kernel",package = "kernel" }

eframe="0.26.2"
egui="0.26.2"
egui_extras= { version = "0.26.2", features = ["svg"] }
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
once_cell="1.19.0"
moka = { version = "0.12.5", features = ["future"] }
tokio = "1.36.0"
futures = "0.3.30"