[package]
name = "enter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_kernel = { path = "../kernel",package = "kernel" }
app_utility = { path = "../utility",package = "utility" }
http="0.2.12"
eframe="0.26.2"
egui="0.26.2"
egui_extras= { version = "0.26.2", features = ["svg"] }
glow="0.13.1"
env_logger = "0.11.3"
serde = { version = "1.0.197", features = ["derive"] }
log = "0.4.21"
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-appender = "0.2.3"
once_cell="1.19.0"
moka = { version = "0.12.5", features = ["future"] }
tokio = "1.36.0"
futures = "0.3.30"
config = "0.14.0"
os_info = "3.5.1"
dirs-sys-next = "0.1.2"
lazy_static = "1.4.0"
parking_lot= "0.12.1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25.0"
objc = "0.2.7"


[target.'cfg(target_os = "windows")'.dependencies]