[package]
name = "native"
version = "0.1.0"
edition = "2021"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[package.metadata.vcpkg]
#dependencies = ["ffmpeg[x264,x265,opus,avcodec,avdevice,avfilter,avformat,swresample,swscale]"]
#git = "https://github.com/microsoft/vcpkg"
#rev = "4a600e9"

[dependencies]
rsmpeg = { git="https://github.com/Junffzz/rsmpeg.git",branch="master", default-features = false, features = ["ffmpeg6"] }

[target.x86_64-apple-darwin.dependencies]
objc = { version = "0.2.7" }
objc-encode = "1.1.0"
block = "0.1.6"
dispatch = "0.2.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-foundation = "0.9.3"
core-graphics = { version = "0.22.3", features = ["highsierra"] }

[target.aarch64-apple-darwin.dependencies]
objc = { version = "0.2.7" }
objc-encode = "1.1.0"
block = "0.1.6"
dispatch = "0.2.0"
objc-foundation = "0.1.1"
objc_id = "0.1.1"
core-foundation = "0.9.3"
core-graphics = { version = "0.22.3", features = ["highsierra"] }
