[package]
name = "utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
rand = "0.9.0-alpha.0"
ring = { version = "0.16.20", features = ["std"] }
uuid = "1.7.0"
tracing = "0.1.40"
lazy_static= "1.4.0"
tokio = { version = "1.0.0", features = ["full"] }
thiserror = "1.0.38"
once_cell = "1.17.0"
network-interface = "0.1.6"

[target.aarch64-apple-darwin.dependencies]
metal = "0.24.0"